--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -15,13 +15,13 @@
 }
 
 /* Make Next pages full height */
-div#__next {
+div#__next,
+html,
+body {
   height: 100%;
+  width: 100%;
 }
 
-html {
-  height: 100%;
-}
 /* Avoid Chrome to see Safari hack */
 @supports (-webkit-touch-callout: none) {
   body {
@@ -40,6 +40,7 @@ body {
   min-height: 100vh;
 
   &.isMobileMenuOpen {
+
     //prevent scrolling on iOS when mobile menu is open
     @include media('<=desktopHeader') {
       overflow: clip;
@@ -97,9 +98,11 @@ button {
   background: #d0d0d0;
   opacity: 1;
 }
+
 .swiper-pagination-bullet-active {
   background: linear-gradient(94.48deg, #f5614b 0%, #f5614b 0.01%, #fa7545 100%);
 }
+
 .swiper-lazy:not(.swiper-lazy-loaded) {
   display: none;
 }
@@ -135,16 +138,19 @@ button {
 
 .sr-only {
   border: 0 !important;
-  clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  /* 1 */
   -webkit-clip-path: inset(50%) !important;
-  clip-path: inset(50%) !important; /* 2 */
+  clip-path: inset(50%) !important;
+  /* 2 */
   height: 1px !important;
   margin: -1px !important;
   overflow: hidden !important;
   padding: 0 !important;
   position: absolute !important;
   width: 1px !important;
-  white-space: nowrap !important; /* 3 */
+  white-space: nowrap !important;
+  /* 3 */
 }
 
 svg,
